# FancyMumbleV2

./: .gitignore  .yarnrc.yml  LICENSE  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  pr.yml
public/locales/de/: appearance.json  audio.json  common.json  language.json  notifications.json  privacy.json  time.json  user_interaction.json
public/locales/dev/: appearance.json  audio.json  common.json  language.json  notifications.json  privacy.json  time.json  user_interaction.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/commands/: helper.rs  mod.rs  settings_cmd.rs  web_cmd.rs  zip_cmd.rs
src-tauri/src/commands/utils/: settings.rs
src-tauri/src/connection/: mod.rs  traits.rs
src-tauri/src/connection/threads/: input_thread.rs  main_thread.rs  mod.rs  output_thread.rs  ping_thread.rs
src-tauri/src/errors/: certificate_error.rs  mod.rs  string_convertion.rs  voice_error.rs
src-tauri/src/manager/: channel.rs  connection_state.rs  mod.rs  text_message.rs  user.rs  voice.rs
src-tauri/src/mumble/: mod.rs  proto.rs
src-tauri/src/proto/: Fancy.proto  Mumble.proto.patch
src-tauri/src/protocol/: message_router.rs  message_transmitter.rs  mod.rs  stream_reader.rs
src-tauri/src/protocol/serialize/: message_container.rs  mod.rs
src-tauri/src/tests/: mod.rs  tidy.rs
src-tauri/src/utils/: certificate_store.rs  constants.rs  file.rs  messages.rs  mod.rs  server.rs  varint.rs
src-tauri/src/utils/audio/: decoder.rs  device_manager.rs  encoder.rs  microphone.rs  mod.rs  player.rs  recorder.rs
src-tauri/src/utils/audio/processing/: compress.rs  hysteresis.rs  mod.rs  resampler.rs  voice_activation.rs
src-tauri/src/utils/frontend/: mod.rs
src-tauri/src/utils/tests/: mod.rs  test_file_utils.rs  test_varint.rs
src/components/: AddNewServer.tsx  ChannelSearch.tsx  ChannelViewer.tsx  ChatInfoBar.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessageContainer.tsx  ColorPicker.tsx  CurrentUserInfo.tsx  EventLog.tsx  GifSearch.tsx  LightBoxImage.tsx  Loader.tsx  QuillChatInput.tsx  QuillEditor.tsx  Sidebar.tsx  Titlebar.tsx  UploadBox.tsx  UrlPreview.tsx  UserInfo.tsx  UserInfoPopover.tsx  WebRTCPreview.tsx
src/helper/: BackendMessageHandler.ts  BrowserUtils.ts  ChannelInfoHelper.ts  ChatMessage.ts  DOMHelper.ts  Fomat.ts  MessageParser.tsx  MessageUIHelper.tsx  PlatformHelper.ts  ProfileDataHelper.ts  UserInfo.tsx  UserInfoHelper.ts
src/i18n/: i18n.ts
src/routes/: Chat.tsx  Login.tsx  Settings.tsx  router.tsx
src/store/: store.ts
(+61 files in other folders)
