[package]
name = "app"
version = "0.2.2"
description = "Fancy Mumble"
authors = ["SetZero"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
prost-build = "0.12.3"
reqwest = { version = "0.12", features = ["cookies"] }
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
patch = "0.7.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
futures = "0.3.4"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
prost = "0.12.3"
byteorder = "1.4.3"
async-trait = "0.1.68"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
base64 = "0.22.0"
os_info = "3"
rodio = "0.17.1"
directories = "5.0.1"
num-traits = "0.2"
brotli = "5.0.0"
webbrowser = "0.8.10"
reqwest = "0.12"
scraper = "0.19"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
symphonia = "0.5.3"
mime_guess = "2.0.4"
uuid = "1.7.0"
tauri-plugin-dialog = "2.0.0-beta.4"
audiopus_sys = { git = "file:///mnt/f/Dokumente/projekte/rust/audiopus_sys", branch = "0.0.9" }
opus =  "0.3.0"
tauri-plugin-os = "2.0.0-beta.3"

[dev-dependencies]
tempfile = "3.5.0"
mockall = "0.12.1"
tokio-test = "0.4.2"
xshell = "0.2.3"

[target.'cfg(all(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
image = "0.25.1"
openssl = "0.10.52"

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6.1", features = [ "java-interface", "shared-stdcxx" ] } # Android
image = {version = "0.25.1", features = ["gif", "png"], default-features = false} # zune jpeg is broken in android builds
openssl = { version = "0.10", features = ["vendored"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = 1

[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1

[rust]
debuginfo-level = 1

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
